--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-firebase/database": "^21.6.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/native": "^7.0.12",
+    "@react-navigation/stack": "^7.0.17",
+    "he": "^1.2.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-dev-menu": "^4.1.1",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.8.2",
+    "react-native-webview": "^13.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -24,7 +41,9 @@
     "@react-native/eslint-config": "0.76.3",
     "@react-native/metro-config": "0.76.3",
     "@react-native/typescript-config": "0.76.3",
+    "@types/he": "^1.2.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
